--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "babel": "^6.23.0",
     "jquery": "^3.6.3",
+    "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.58.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
