--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "particles.js": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.8.1",
+    "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-scroll-to-top": "^3.0.0",
     "sass": "^1.58.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
