--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "rsc",
+  "name": "ieee_rssc-2023",
+  "homepage": "http://www.ieeerssc.tech",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -29,6 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
